Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 2-May-2003
Additions:
    1. JUnitServlet now supports a value of 'xml' for the format parameter, generating a format compatible with
       ant's XMLResultFormatter

 4-Apr-2003
Acknowledgements:
    Thanks to Andrew Bickerton for:
          correcting the handling of document.open for non-HTML pages and new pages with base tags,
          correcting the document.write append problem,
          identifying the javascript parent frame update problem and suggesting a fix, and
          showing how to handle responses with content-length 0.
    Thanks to Brendan Boesen for:
          adding a method to access session IDs in ServletUnitContext, and
          correcting the session invalidation problem.
    Thanks to Daniel Jasmin for fixing the handling of applet loading from archives.
    Thanks to Mark Luty for supplying a test for the getElementsByName function.
    Thanks to Ron Webster for designing the new HttpUnit logo.
    Thanks to Sergey Bondarenko for supplying a test for getElementsByTagName
    Thanks to George Murnock for adding WebResponse.getMatchingTables()

Problems Fixed:
    Content and Parsing
        1. Bug #700889: Under certain cases, multiple <script> sections in a document caused a problem where
           only those HTML elements defined before the first one were actually available to the scripts.
        2. Bug #709979: Select.selectedIndex was returning -1 for a normal select box with no options explicitly selected.
        3. calling Document.open() on a non-HTML page no longer throws an exception.
        4. Rewriting a document now properly handles any <base> tags in the new document.
        5. Applets were not loading properly from applets if a codebase was specified in the <applet> tag.